# pyxis-portfolio-challenge

./: .gitignore  .pre-commit-config.yaml  Dockerfile.backend  LICENSE  NOTICE  README.md  README_FOR_DEVS.md  TODO.md  azure-pipelines.yml  docker-compose.dev.yml  docker-compose.yml  my_bot.py  package.json  pyproject.toml  pyxis-embed.html  run_evaluate.py  run_random.py  run_random_gym.py  run_random_gym_custom_opp.py  run_run.py
.github/: pull_request_template.md
.github/workflows/: frontend.yml  test.yml
.husky/: commit-msg  pre-commit
aiml_pyxis_investment_game/: __init__.py  cli.py  config.py  config.yaml  logging_utils.py  multi_agent_cli.py
aiml_pyxis_investment_game/agents/: __init__.py  knapsack.py  multi_agent_do_nothing.py  multi_agent_knapsack.py  multi_agent_pyxie.py  multi_step_knapsack.py  pyxie.py  utils.py
aiml_pyxis_investment_game/environment/: __init__.py  competition.py  custom_callbacks.py  env_factory.py  evaluate.py  market_mechanics.py  (+11 more)
app/: README.md  app.py  azure.py  connect_to_postgresql.py  endpoint_datamodels.py  game_db.py  middleware.py  opponent_runner.py  redis_cache.py  settings.py  utils.py
benchmark_agents/: README.md  analyze_effective_enpv.py  benchmark.py  benchmark_greedy_top4.py  benchmark_knapsack_vs_knapsack.py  benchmark_multi_agent_metrics.py  benchmark_ppo_vs_knapsack.py  benchmark_ppo_vs_knapsack_full.py  benchmark_single_vs_multi_agent.py  capture_knapsack_replay.py  compare_agents.py  compare_multi_agents.py  loading.py  plotting.py  run_all_level0.sh  run_all_level1.sh  run_all_level2.sh  run_rand_knap_pyxie.sh  sanity_check_single_vs_multi.py  sweep_distributional_mck.py  test_congestion_impact.py  validate_core_agents.py
docs/: environment-security-analysis.md
e2e/: .env.example  .gitignore  README.md  cypress.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/: .env.example  .gitignore  Dockerfile_windows_fe  README.md  find-node.ps1  gsk-cert.crt  linux_dockerfile_fe  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.mts
notebooks/: train_pyxie.ipynb
pyxis_portfolio_challenge/: __init__.py  cli.py  config.py  config.yaml  file_io.py  multi_agent_cli.py  rng.py
tests/: conftest.py  test_cli.py  test_config.py  test_file_io.py  test_multi_agent_env.py  utils_for_tests.py
(+871 files in other folders)
